--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,11 +1,11 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Base.Theme.MiwokApp" parent="Theme.AppCompat.DayNight.DarkActionBar">
+    <style name="Base.Theme.TranslationApp" parent="Theme.AppCompat.DayNight.DarkActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
     </style>
 
-    <style name="Theme.MiwokApp" parent="Base.Theme.MiwokApp" />
+    <style name="Theme.TranslationApp" parent="Base.Theme.TranslationApp" />
 
 
 </resources>
