--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -22,5 +22,5 @@
     <color name="category_colors">#8800A0</color>
 
     <!-- Background color for the phrases category -->
-    <color name="category_phrases">#174E41</color>
+    <color name="category_phrases">#68CBD8</color>
 </resources>
