Rename Project Name and Package name

--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -4,8 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="horizontal"
-    android:minHeight="88dp"
-    android:background="@color/tan_background">
+    android:minHeight="88dp">
 
     <ImageView
         android:layout_width="@dimen/list_item_height"
