--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@color/tan_background"
     android:orientation="vertical"
-    tools:context="MainActivity">
+    tools:context="com.example.urduenglish.MainActivity">
 
     <TextView
         android:id="@+id/numbers"
@@ -25,12 +25,11 @@
         style="@style/CategoryStyle"
         android:background="@color/category_colors"
         android:text="@string/category_colors"
-        android:onClick="openColorsList"
         />
 
     <TextView
         android:id="@+id/phrases"
         style="@style/CategoryStyle"
-        android:background="@color/category_phrases"
+        android:background="#2196F3"
         android:text="@string/category_phrases" />
 </LinearLayout>
