Added Play Icon.

--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
+    android:layout_height="@dimen/list_item_height"
+    android:background="@color/tan_background"
     android:minHeight="88dp">
 
     <ImageView
@@ -14,8 +14,11 @@
     <LinearLayout
         android:id="@+id/text_container"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="@dimen/list_item_height"
         android:orientation="vertical"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentTop="true"
+        android:layout_toRightOf="@+id/image"
         android:paddingLeft="16dp"
         android:background="@color/category_numbers">
 
@@ -30,16 +33,22 @@
             android:text="@android:color/white"
             android:textStyle="bold"
             />
+
+        <ImageView
+            android:layout_width="305dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="16dp"
+            android:src="@drawable/baseline_play_arrow_white_24dp1" />
+
         <TextView
             android:id="@+id/default_text"
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="top"
-            android:textAppearance="?android:textAppearanceMedium"
             android:text="@android:color/white"
-            tools:text="One"
-            />
+            android:textAppearance="?android:textAppearanceMedium"
+            tools:text="One" />
     </LinearLayout>
 
-</LinearLayout>
+</RelativeLayout>
