--- a/app/src/main/res/layout/list_items.xml
+++ b/app/src/main/res/layout/list_items.xml
@@ -4,41 +4,36 @@
     android:layout_width="match_parent"
     android:layout_height="@dimen/list_item_height"
     android:background="@color/tan_background"
-    android:minHeight="88dp">
+    android:orientation="horizontal">
 
     <ImageView
-        android:layout_width="@dimen/list_item_height"
+        android:id="@+id/image"
+        android:layout_width="88dp"
         android:layout_height="@dimen/list_item_height"
-        android:id="@+id/image"/>
+        />
 
     <LinearLayout
         android:id="@+id/text_container"
         android:layout_width="match_parent"
         android:layout_height="@dimen/list_item_height"
-        android:orientation="vertical"
-        android:layout_alignParentBottom="true"
         android:layout_alignParentTop="true"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
         android:layout_toRightOf="@+id/image"
-        android:paddingLeft="16dp"
-        android:background="@color/category_numbers">
+        android:background="@color/category_numbers"
+        android:orientation="vertical"
+        android:paddingLeft="16dp">
 
         <TextView
             android:id="@+id/urdu_text"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:layout_weight="1"
             android:gravity="bottom"
-            tools:text="ایک "
-            android:textAppearance="?android:textAppearanceMedium"
             android:text="@android:color/white"
+            android:textAppearance="?android:textAppearanceMedium"
             android:textStyle="bold"
-            />
-
-        <ImageView
-            android:layout_width="305dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="16dp"
-            android:src="@drawable/baseline_play_arrow_white_24dp1" />
+            tools:text="ایک " />
 
         <TextView
             android:id="@+id/default_text"
@@ -50,5 +45,12 @@
             android:textAppearance="?android:textAppearanceMedium"
             tools:text="One" />
     </LinearLayout>
+
+    <ImageView
+        android:layout_width="86dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/baseline_play_arrow_white_24dp1" />
 
 </RelativeLayout>
