--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,19 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
-
     <!-- Primary color of the app (shown in the app bar) -->
-    <color name="primary_color">#4A312A</color>
+    <color name="primary_color">#131212</color>
 
     <!-- Primary dark color of the app (shown in the status bar) -->
-    <color name="primary_dark_color">#2F1D1A</color>
+    <color name="primary_dark_color">#4A312A</color>
 
     <!-- Background color for app -->
     <color name="tan_background">#FFF7DA</color>
 
     <!-- Background color for the numbers category -->
-    <color name="category_numbers">#975D17</color>
+    <color name="category_numbers">#3F51B5</color>
+
+
 
     <!-- Background color for the family members category -->
     <color name="category_family">#379237</color>
@@ -22,5 +21,5 @@
     <color name="category_colors">#8800A0</color>
 
     <!-- Background color for the phrases category -->
-    <color name="category_phrases">#03A9F4</color>
+    <color name="category_phrases">#16AFCA</color>
 </resources>
